# harpocrates

./: .gitignore  CMakeLists.txt  README.md  harpocrates.cpp
module/: CMakeLists.txt  harpocrates.h
module/base/: algorithm_engine.h  base.h  neon_windows.h
module/image_tool/: CMakeLists.txt  image_border.h  image_convert.h  image_core.h  image_filter.h  image_floodfill.h  image_io.h  image_mat.h  image_polygon.h  image_resize.h  image_tool.h
module/iterator/: CMakeLists.txt  iterator.h
module/marco/: marco.cmake
module/memory_tool/: CMakeLists.txt  memory_tool.h
module/meta_program/: CMakeLists.txt  meta_program.h
module/path_walker/: CMakeLists.txt  path_walker.h
module/reflection/: CMakeLists.txt  reflection.h
module/singleton_pattern/: CMakeLists.txt  singleton_pattern.h
module/thread_pool/: CMakeLists.txt  thread_pool.h
module/time_clock/: CMakeLists.txt  time_clock.h
module/tools/: harpocrates_mat.natvis  windows-build-android.bat
note/: base_note.md
